# template-downloader

./: CMakeLists.txt  README.md  build.bat  run.bat
.github/workflows/: build-deploy.yml  build-ubuntu.yml  build-windows.yml
debug/: debug.sln
src/: array.h  main.cpp  map.h  memory_arena.h  strings.h  types.h  utility.cpp  utility.h
